--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.abdulwarith.netlify.app</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.abdulwarith001.netlify.app</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+234 814 7801 152</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>adebayoayomide6464@gmail.com</span></li>
                 </ul>
